--- a/static/styles.css
+++ b/static/styles.css
@@ -44,3 +44,14 @@ table {
 html, body{
   height: 100%;
 }
+@media screen and (min-width: 620px) and (max-width: 867px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
